Revert getFirst to get(0)